Fixes issues with table overflowing post container
* Tables will now scroll horizontally when content bleeds out

* Fixes #593

--- a/modules/ept-frontend/client/scss/ept/global/_posts.scss
+++ b/modules/ept-frontend/client/scss/ept/global/_posts.scss
@@ -9,6 +9,10 @@
   ul { white-space: normal }
   img.loaded { opacity: 1; }
   img { @include transition(opacity 0.5s ease-in); opacity: 0; }
+  & table {
+    display: block;
+    overflow-x: scroll;
+  }
   .video-wrap {
     position: relative;
     padding-bottom: 56.25%;
